@@ -18,6 +18,8 @@ class aide::logrotate (
 ) {
   assert_private()
 
+  simplib::assert_optional_dependency($module_name, 'simp/logrotate')
+
   logrotate::rule { 'aide':
     log_files                 => [ "${logdir}/*.log" ],
     missingok                 => true,
