@@ -1,6 +1,6 @@
 {
   "name": "simp-aide",
-  "version": "6.3.1",
+  "version": "6.4.0",
   "author": "SIMP Team",
   "summary": "manages AIDE",
   "license": "Apache-2.0",
@@ -13,46 +13,53 @@
   ],
   "dependencies": [
     {
-      "name": "simp/auditd",
-      "version_requirement": ">= 7.0.0 < 9.0.0"
-    },
-    {
-      "name": "simp/logrotate",
-      "version_requirement": ">= 6.1.0 < 7.0.0"
-    },
-    {
-      "name": "simp/rsyslog",
-      "version_requirement": ">= 7.0.0 < 8.0.0"
-    },
-    {
       "name": "simp/simplib",
-      "version_requirement": ">= 3.14.1 < 4.0.0"
+      "version_requirement": ">= 3.14.1 < 5.0.0"
     },
     {
       "name": "puppetlabs/stdlib",
       "version_requirement": ">= 4.12.0 < 7.0.0"
     }
   ],
+  "simp": {
+    "optional_dependencies": [
+      {
+        "name": "simp/auditd",
+        "version_requirement": ">= 8.5.0 < 9.0.0"
+      },
+      {
+        "name": "simp/logrotate",
+        "version_requirement": ">= 6.1.0 < 7.0.0"
+      },
+      {
+        "name": "simp/rsyslog",
+        "version_requirement": ">= 7.0.0 < 8.0.0"
+      }
+    ]
+  },
   "operatingsystem_support": [
     {
       "operatingsystem": "CentOS",
       "operatingsystemrelease": [
         "6",
-        "7"
+        "7",
+        "8"
       ]
     },
     {
       "operatingsystem": "RedHat",
       "operatingsystemrelease": [
         "6",
-        "7"
+        "7",
+        "8"
       ]
     },
     {
       "operatingsystem": "OracleLinux",
       "operatingsystemrelease": [
         "6",
-        "7"
+        "7",
+        "8"
       ]
     }
   ],
